--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="inr">
 
                 <h4 class="inr">INR</h4>
-                <img src="/images/india.jpg" width="25px" alt="india">
-                <img class="pic" src="/images/remover.png" width="30px" alt="">
+                <img src="images/india.jpg" width="25px" alt="india">
+                <img class="pic" src="images/remover.png" width="30px" alt="">
 
 
                 <h4 class="hy">List your property</h4>
@@ -81,7 +81,7 @@
                     src="https://q-xx.bstatic.com/xdata/images/xphoto/248x248/468828542.jpeg?k=b51cb74f05db0ebc1a1cbcca384fa2ee8c4d6c0b5fd089a15b1fd14a107ccab4&o"
                     width="100px">
                 <button class="button">Save on stays</button>
-                <img class="nd" src="/images/imgg.jpeg" width="550px" alt="">
+                <img class="nd" src="images/imgg.jpeg" width="550px" alt="">
                 <div class="hv">
                     <p>Vacation rentals</p>
                     <p> <b>Live the dream in a vacation home </b> </p>
@@ -98,10 +98,10 @@
 
                     <H2 class="txt"> Browse by property type </H2>
                     <div class="picc">
-                        <img src="/images/room.jpeg" alt="">
-                        <img src="/images/apprtment.jpeg" alt="">
-                        <img src="/images/resorts.jpeg" alt="">
-                        <img src="/images/villas.jpeg" alt="">
+                        <img src="images/room.jpeg" alt="">
+                        <img src="images/apprtment.jpeg" alt="">
+                        <img src="images/resorts.jpeg" alt="">
+                        <img src="images/villas.jpeg" alt="">
 
 
 
@@ -121,8 +121,8 @@
 
                     <div class="delhi">
 
-                        <img class="dell" src="/images/delhi.webp" width="550px" height="300px">
-                        <img class="ban" src="/images/banglore.webp" width="550px" height="300px" alt="">
+                        <img class="dell" src="images/delhi.webp" width="550px" height="300px">
+                        <img class="ban" src="images/banglore.webp" width="550px" height="300px" alt="">
 
                     </div>
                     <div class="dex">
@@ -139,9 +139,9 @@
 
                     <div class="state">
 
-                        <img class="mum" src="/images/mumbai.webp" width="355px" height="260px" alt="">
-                        <img class="che" src="/images/chennai.webp" width="355px" height="260px" alt="">
-                        <img class="var" src="/images/varanasi.webp" width="355px" height="260px" alt="">
+                        <img class="mum" src="images/mumbai.webp" width="355px" height="260px" alt="">
+                        <img class="che" src="images/chennai.webp" width="355px" height="260px" alt="">
+                        <img class="var" src="images/varanasi.webp" width="355px" height="260px" alt="">
 
                     </div>
                     <di class="pop">
@@ -167,12 +167,12 @@
                             </ul>
                         </div>
                         <div class="history">
-                            <img src="/images/mysore.jpg" width="175px" height="140px">
-                            <img src="/images/hambi.jpg" width="175px" height="140px" alt="">
-                            <img src="/images/aurangabad.jpg" width="175px" height="140px" alt="">
-                            <img src="/images/khajuraho.jpg" width="175px" height="140px" alt="">
-                            <img src="/images/bundi.jpg" width="175px" height="140px" alt="">
-                            <img src="/images/jaipur.jpg" width="175px" height="140px" alt="">
+                            <img src="images/mysore.jpg" width="175px" height="140px">
+                            <img src="images/hambi.jpg" width="175px" height="140px" alt="">
+                            <img src="images/aurangabad.jpg" width="175px" height="140px" alt="">
+                            <img src="images/khajuraho.jpg" width="175px" height="140px" alt="">
+                            <img src="images/bundi.jpg" width="175px" height="140px" alt="">
+                            <img src="images/jaipur.jpg" width="175px" height="140px" alt="">
                         </div>
 
 
@@ -216,12 +216,12 @@
                             <h1>Explore destinations in India</h1>
 
                             <div class="hydra">
-                                <img src="/images/new.jpg" alt="">
-                                <img src="/images/lore.jpg" alt="">
-                                <img src="/images/bai.jpg" alt="">
-                                <img src="/images/nai.jpg" alt="">
-                                <img src="/images/asi.jpg" alt="">
-                                <img src="/images/hydr.jpg" alt="">
+                                <img src="images/new.jpg" alt="">
+                                <img src="images/lore.jpg" alt="">
+                                <img src="images/bai.jpg" alt="">
+                                <img src="images/nai.jpg" alt="">
+                                <img src="images/asi.jpg" alt="">
+                                <img src="images/hydr.jpg" alt="">
 
 
                             </div>
@@ -251,16 +251,16 @@
                                 <p>Save on stays for August 8 - August 10</p>
 
                                 <div class="imo">
-                                    <img class="lol" src="/images/olive.jpg" width="250px">
+                                    <img class="lol" src="images/olive.jpg" width="250px">
                                 </div>
 
-                                <div class="bom"> <img class="mob" src="/images/tree.jpg" width="250px" alt=""></div>
+                                <div class="bom"> <img class="mob" src="images/tree.jpg" width="250px" alt=""></div>
 
 
-                                <di class="tu"> <img class="ut" src="/images/kochi.jpg" width="250px" alt=""> </di>
+                                <di class="tu"> <img class="ut" src="images/kochi.jpg" width="250px" alt=""> </di>
 
 
-                                <div class="hama"> <img class="maha" src="/images/taj.jpg" width="250px" alt=""> </div>
+                                <div class="hama"> <img class="maha" src="images/taj.jpg" width="250px" alt=""> </div>
 
                             </div>
 
@@ -355,4 +355,5 @@
 </body>
 
 </html>
+
 </div>
